styles/_main.scss
/* ... */
.w-24 {
  width: 24px;
}

.drawer {
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  position: relative;
  z-index: 100;

  &--content {
    overflow: auto;
    position: relative;
    padding-bottom: 66px !important;
    display: flex;
    flex-direction: column;

    @media screen and (min-width: 768px) {
      width: 360px;
    }

    &.width_70 {
      width: 70vw;

      @media screen and (min-width: 768px) {
        width: 360px;
      }
    }

    width: 100vw;
    height: 100%;
    top: 0;
    left: 0;
    background: #fafbfb;

    &__header {
      background: white;
      margin-bottom: 4px;
      height: 36px;
      width: 100%;
      display: flex;
      justify-content: space-between;
      align-items: center;
    }
  }
}

.wrapper--img-order {
  width: 40px;
  height: 40px;
  min-width: 40px;
  margin-left: 10px;
  border-radius: 4px;
  overflow: hidden;
  background: $vanilla;
}

.order--item {
  text-align: center;
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 0 10px;
  border-radius: 4px;
  height: 40px;
  width: 40px;
  min-width: 40px;
  margin: 0 10px;

  &__secondary {
    background: #f0f2f3;
    color: #667e8a;
  }

  .edit-pen {
    width: 12px;
    height: 12px;
    border-radius: 2px;
    right: -2px;
    bottom: -2px;
    pointer-events: none;
  }
}

.collapse {
  &__header {
    width: 100%;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;

    &--gray {
      background: #f0f2f3;
      color: #667e8a;
    }
  }
}

.bg-gray-melo {
  background: #fafbfb;
  border-radius: 4px;
}

.c-business-card-pen {
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;
  height: 24px;
  background: #0050ff;
  border-radius: 4px;
}

.c-main-cta-sec--admin {
  position: fixed;
  bottom: 0;
  right: 0;
  width: 100%;
  padding: 0 15px;
  z-index: 1000;
  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);

  @media screen and (min-width: 600px) {
    width: 400px;
    box-shadow: none;
    position: relative;
    margin: auto;
  }

  background: #fff;
}

.u-no-wrap {
  white-space: nowrap;
}

.u-pre-wrap {
  white-space: pre-wrap;
}

.transition {
  transition: all 0.3s linear 1s !important;
}

.c-menu-homeTab {
  position: absolute !important;
  top: 0;
  left: 0;
  z-index: 20;
}

.min-width-100 {
  min-width: 100px;
}

.u-overflow-y-hidden {
  overflow-y: hidden;
}

.c-order-card {
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  margin-bottom: 2px;
}

.rotated {
  transform: rotate(180deg);
}

.mt-35 {
  margin-top: 35px;
}

.category-box-shadow {
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
}

// new loader
.lds-default {
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  opacity: 0;
  width: 100vw;
  height: 100vh;
  background: #fff;
  z-index: -1;
  transition: opacity 0.3s ease-in-out, z-index 0s ease-in-out 0.3s;

  &.local {
    position: relative;
    opacity: 1;
    width: 100%;
    min-height: 400px;
    z-index: 1;
    top: unset;
    left: unset;
    display: flex;
  }

  &.isShow {
    opacity: 1;
    z-index: 100000;
    transition: opacity 0.3s ease-in-out;
  }
}

.lds-default > div {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}

.lds-default > div div {
  position: absolute;
  width: 6px;
  height: 6px;
  background: #888;
  border-radius: 50%;
  animation: lds-default 1.2s linear infinite;
}

.lds-default > div div:nth-child(1) {
  animation-delay: 0s;
  top: 37px;
  left: 66px;
}

.lds-default > div div:nth-child(2) {
  animation-delay: -0.1s;
  top: 22px;
  left: 62px;
}

.lds-default > div div:nth-child(3) {
  animation-delay: -0.2s;
  top: 11px;
  left: 52px;
}

.lds-default > div div:nth-child(4) {
  animation-delay: -0.3s;
  top: 7px;
  left: 37px;
}

.lds-default > div div:nth-child(5) {
  animation-delay: -0.4s;
  top: 11px;
  left: 22px;
}

.lds-default > div div:nth-child(6) {
  animation-delay: -0.5s;
  top: 22px;
  left: 11px;
}

.lds-default > div div:nth-child(7) {
  animation-delay: -0.6s;
  top: 37px;
  left: 7px;
}

.lds-default > div div:nth-child(8) {
  animation-delay: -0.7s;
  top: 52px;
  left: 11px;
}

.lds-default > div div:nth-child(9) {
  animation-delay: -0.8s;
  top: 62px;
  left: 22px;
}

.lds-default > div div:nth-child(10) {
  animation-delay: -0.9s;
  top: 66px;
  left: 37px;
}

.lds-default > div div:nth-child(11) {
  animation-delay: -1s;
  top: 62px;
  left: 52px;
}

.lds-default > div div:nth-child(12) {
  animation-delay: -1.1s;
  top: 52px;
  left: 62px;
}

@keyframes lds-default {
  0%,
  20%,
  80%,
  100% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.5);
  }
}

.category-item {
  height: 32px;
  border-radius: 16px;
}

.u-top-50-percent {
  top: 50%;
  transform: translateY(-50%);
}

.z-index-2 {
  z-index: 2;
}

.z-index-4 {
  z-index: 4;
}

.deal-image {
  width: 75px;
  height: 75px;
}

.red-bullet {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #ff0038;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
}

.green-bullet {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #00c896;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
}

.u-border-right-green {
  border-right: 4px solid #00c896;
}

.u-border-right-red {
  border-right: 4px solid #ff0038;
}

.collapse-header {
  height: 52px;
  display: flex !important;
  align-items: center;
  padding: 10px;
}

.ichEditor-root {
  background: #fff;
  border: 1px solid #ddd;
  font-family: "Georgia", serif;
  font-size: 14px;
  padding: 15px;
}

.RichEditor-editor {
  cursor: text;
  font-size: 16px;
  margin-top: 0;
  padding: 10px;
  border: 1px solid #ddd;
  border-top: 0;
}

.RichEditor-header {
  box-shadow: 0px 0px 3px #001e2d4a;
}

.RichEditor-editor .public-DraftEditorPlaceholder-root,
.RichEditor-editor .public-DraftEditor-content {
  margin: 0 -15px -15px;
  padding: 15px;
}
/* ... */

